--- a/components/Menu/Menu.html
+++ b/components/Menu/Menu.html
@@ -9,17 +9,17 @@
         <span class="icon-bar"></span>
       </button>
 
-      <a class="navbar-brand" href="/#/">
+      <a class="navbar-brand" ui-sref="home">
       <img src="resources/imagenes/icono.png" width="30" height="30" class="gep-inline align-top" alt="">
       Gestion de Proveedores</a>
     </div>
     <div id="navbar" class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="alt btn-info"><a href="/#/productos">Productos</a></li>
-        <li class="alt btn-info"><a href="/#/proveedores">Proveedores</a></li>
-        <li class="alt btn-info"><a href="/#/pedidos">Pedidos</a></li>
-        <li class="alt btn-info" ng-if="authenticated"><a href="/#/login">Login</a></li>
-        <li class="alt btn-danger"><a ng-click="logout()" href="#">Logout</a></li>
+        <li class="alt btn-info" ng-show="authenticated"><a ui-sref="productos">Productos</a></li>
+        <li class="alt btn-info" ng-show="authenticated"><a ui-sref="proveedores">Proveedores</a></li>
+        <li class="alt btn-info" ng-show="authenticated"><a ui-sref="pedidos">Pedidos</a></li>
+        <li class="alt btn-info" ng-show="!authenticated"><a ui-sref="login">Login</a></li>
+        <li class="alt btn-danger" ng-show="authenticated"><a ng-click="logout()" ui-serf="#">Logout</a></li>
       </ul>
     </div>
   </div>
