--- a/modules/proveedores/views/crear.html
+++ b/modules/proveedores/views/crear.html
@@ -15,7 +15,7 @@
     <div class="form-group col-xs-12 col-sm-6">
       <label for="apellido">Razon Social</label>
       <input type="text" class="form-control" id="razon_social" name="razon_social"
-          ng-model="proveedor.razon_social" required>
+          ng-model="proveedor.nombre" required>
       <span class="help-block text-danger"
           ng-show="form.razon_social.$dirty && form.razon_social.$invalid">
         <span ng-show="form.razon_social.$dirty && form.razon_social.$error.required"
@@ -30,68 +30,24 @@
       <h3 class="panel-title">Contacto</h3>
     </div>
     <div class="panel-body">
-      <div class="form-group col-xs-12 col-sm-6">
-        <label for="calle">Calle</label>
-        <input type="text" class="form-control" id="calle" name="calle" ng-model="proveedor.calle" required>
+      <div class="form-group col-xs-12 col-sm-4">
+        <label for="domicilio">Domicilio</label>
+        <input type="text" class="form-control" id="domicilio" name="domicilio" ng-model="proveedor.direccion" required>
         <span class="help-block text-danger"
-            ng-show="form.calle.$dirty && form.calle.$invalid">
-          <span ng-show="form.calle.$dirty && form.calle.$error.required"
+            ng-show="form.domicilio.$dirty && form.domicilio.$invalid">
+          <span ng-show="form.domicilio.$dirty && form.domicilio.$error.required"
               class="text-danger">
             Este campo es obligatorio
           </span>
         </span>
       </div>
-      <div class="form-group col-xs-12 col-sm-2">
-        <label for="numero">Numero</label>
-        <input type="text" class="form-control" id="numero" name="numero" ng-model="proveedor.numero" required>
-        <span class="help-block text-danger"
-            ng-show="form.numero.$dirty && form.numero.$invalid">
-          <span ng-show="form.numero.$dirty && form.numero.$error.required"
-              class="text-danger">
-            Este campo es obligatorio
-          </span>
-        </span>
-      </div>
-      <div class="form-group col-xs-12 col-sm-2">
-        <label for="piso">Piso</label>
-        <input type="text" class="form-control" id="piso" name="piso" ng-model="proveedor.piso">
-      </div>
-      <div class="form-group col-xs-12 col-sm-2">
-        <label for="departamento">Departamento</label>
-        <input type="text" class="form-control" id="departamento" name="departamento" ng-model="proveedor.departamento">
-      </div>
-      <div class="form-group col-xs-12 col-sm-6">
-        <label for="calle">Ciudad</label>
-        <input type="text" class="form-control" id="calle" name="calle" ng-model="proveedor.calle" required>
-        <span class="help-block text-danger"
-            ng-show="form.calle.$dirty && form.calle.$invalid">
-          <span ng-show="form.calle.$dirty && form.calle.$error.required"
-              class="text-danger">
-            Este campo es obligatorio
-          </span>
-        </span>
-      </div>
-      <div class="form-group col-xs-6">
-        <label for="provincia">Provincia</label>
-        <select name="provincia" class="form-control" ng-model="proveedor.provincia" required
-            ng-options="provincia.id as provincia.nombre for provincia in provincias">
-          <option value=""></option>
-        </select>
-        <span class="help-block text-danger"
-            ng-show="form.provincia.$dirty && form.provincia.$invalid">
-          <span ng-show="form.provincia.$dirty && form.provincia.$error.required"
-              class="text-danger">
-            Este campo es obligatorio
-          </span>
-        </span>
-      </div>
-      <div class="form-group col-xs-6">
+      <div class="form-group col-xs-4">
         <label for="telefono">Telefono</label>
         <input type="text" class="form-control" id="telefono" name="telefono" ng-model="proveedor.telefono" required>
       </div>
-      <div class="form-group col-xs-6">
+      <div class="form-group col-xs-4">
         <label for="telefono">Email</label>
-        <input type="text" class="form-control" id="telefono" name="telefono" ng-model="proveedor.telefono" required>
+        <input type="text" class="form-control" id="telefono" name="telefono" ng-model="proveedor.email" required>
       </div>
     </div>
   </div>
