editar proveedores y finalizar pedidos descartados temporalmente

--- a/modules/pedidos/views/ver.html
+++ b/modules/pedidos/views/ver.html
@@ -6,7 +6,7 @@
   <div class="panel-body">
     <p><b>Proveedor: {{ pedido.proveedor}}</b></p>
     <p><b>Descripcion: {{ pedido.descripcion}}</b></p>
-    <p><b>Estado del Pedido: {{ pedido.estado}}</b> </p>
+    <!--p><b>Estado del Pedido: {{ pedido.estado}}</b> </p-->
   </div>
 </div>
 <table class="table">
@@ -34,8 +34,8 @@
 </div>
 <br>
  <div class="col-xs-12 margin-bottom">
-    <button type="submit" class="btn btn-primary pull-right"
-        ng-click="finalizarPedido()">Finalizar</button>
+    <!--button type="submit" class="btn btn-primary pull-right"
+        ng-click="finalizarPedido()">Finalizar</button-->
     <button type="submit" class="btn btn-danger pull-right eliminar-btn"
         ng-click="eliminarPedido()">Eliminar</button>
     <button type="submit" class="btn btn-success pull-right eliminar-btn" print-btn>Imprimir</button>
