--- a/modules/proveedores/views/listar.html
+++ b/modules/proveedores/views/listar.html
@@ -21,7 +21,7 @@
     <td>{{ proveedor.domicilio }}</td>
     <td class="text-center">
       <div class="btn-group">
-        <a type="button" class="btn btn-info" ui-sref="editar-proveedor({proveedorId: proveedor.id})">Editar</a>
+        <!--a type="button" class="btn btn-info" ui-sref="editar-proveedor({proveedorId: proveedor.id})">Editar</a-->
         <button type="submit" class="btn btn-danger" ng-click="eliminar(proveedor.cuit)">Eliminar</button>
       </div>
     </td>
